[package]
name = "dna_library"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dna_library"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
dnarepo_core = {path = "../dnarepo_core"}
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "lair-keystore-0.3.0" }
mere_memory_types = { git = "https://github.com/matthme/hc-zome-mere-memory", branch = "lair-keystore-0.3.0" }
hdk = { git = "https://github.com/holochain/holochain", rev = "f5270601c1a489086fed853812e1326726210dfd" }
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
