[package]
name = "dnarepo_core"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "dnarepo_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "holochain-0.2.3-beta-rc.1" }
# hdi = "=0.3.1"
hex = "0"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
whi_hdi_extensions = { git = "https://github.com/matthme/rust-hdi-extensions", branch = "holochain-0.2.3-beta-rc.1" }

[dev-dependencies]
rand = "0.8.3"
