[package]
name = "reviews"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "reviews"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
dnarepo_core = {path = "../dnarepo_core"}
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "holochain-0.3.0-beta-dev.20" }
hdk = { git = "https://github.com/holochain/holochain", rev = "f5270601c1a489086fed853812e1326726210dfd" }
serde = ">1.0.166"
serde_yaml = "0.8.17"
thiserror = "1"
whi_hdi_extensions = "0.2.1"

[dev-dependencies]
rand = "0.8.3"
