[package]
name = "web_assets"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "web_assets"
crate-type = ["cdylib", "rlib"]

[dependencies]
devhub_types = {path = "../../devhub_types"}
web_assets_core = {path = "../web_assets_core"}
hc_crud_caps = { git = "https://github.com/matthme/rust-hc-crud-caps", branch = "lair-keystore-0.3.0" }
hdk = { git = "https://github.com/holochain/holochain", rev = "f5270601c1a489086fed853812e1326726210dfd" }
mere_memory_types = { git = "https://github.com/matthme/hc-zome-mere-memory", branch = "lair-keystore-0.3.0" }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
